# Lookout

./: .gitignore  calibration.js  clientIO.js  fillEntries.js  fillTreatments.js  getUnfiltered.js  index.js  installer.sh  lookout.js  package.json  test2.js  transmitterIO.js
transmitterWorker/: CMakeLists.txt  authChallengeRxMessage.cpp  authChallengeRxMessage.hpp  authChallengeTxMessage.cpp  authChallengeTxMessage.hpp  authRequestTxMessage.cpp  authRequestTxMessage.hpp  authStatusRxMessage.cpp  authStatusRxMessage.hpp  authenticator.cpp  authenticator.hpp  bluetoothMessage.cpp  bluetoothMessage.hpp  bluetoothServices.hpp  bondRequestTxMessage.cpp  bondRequestTxMessage.hpp  crc.cpp  crc.hpp  encryptor.cpp  encryptor.hpp  hexdump.cpp  hexdump.hpp  keepAliveTxMessage.cpp  keepAliveTxMessage.hpp  testStub.cpp  transmitterTimeRxMessage.cpp  transmitterTimeRxMessage.hpp  transmitterTimeTxMessage.cpp  transmitterTimeTxMessage.hpp  transmitterWorker.cpp  transmitterWorker.hpp  uuidv4.cpp  uuidv4.hpp
